traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:26: error: recursive variable x needs type
    var x=x+1
          ^